--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.2.6"
 requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
+ipython = "^7.26.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
