--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["ritikrajdev <ritikrajdev761@gmail.com>"]
 python = "^3.9"
 Django = "^3.2.6"
 requests = "^2.26.0"
+beautifulsoup4 = "^4.9.3"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.26.0"
