--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^3.2.6"
 requests = "^2.26.0"
 beautifulsoup4 = "^4.9.3"
+djangorestframework = "^3.12.4"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.26.0"
